--- a/package.json
+++ b/package.json
@@ -69,9 +69,12 @@
     "nanoid": "^3.1.15",
     "object-hash": "^2.0.3",
     "oidc-token-hash": "^5.0.1",
-    "paseto": "^2.1.0",
+    "paseto2": "npm:paseto@^2.1.3",
     "quick-lru": "^5.1.1",
     "raw-body": "^2.4.1"
+  },
+  "optionalDependencies": {
+    "paseto3": "npm:paseto@^3.0.0"
   },
   "devDependencies": {
     "@hapi/hapi": "^20.0.1",
