--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,18 +1,17 @@
 blank_issues_enabled: false
 contact_links:
+  - name: Support the project
+    url: https://github.com/sponsors/panva
+    about:
+      To make sure you get your questions answered
   - name: ❓ Question
     url: https://github.com/panva/node-oidc-provider/discussions/894
     about:
-      Have a question about using oidc-provider? Head over to the discussions "Q&A" Category
+      Have a question about using oidc-provider? Support the project and then head over to the discussions "Q&A" Category
   - name: 💡 Feature proposal
     url: https://github.com/panva/node-oidc-provider/discussions/893
     about:
       Have a proposal for a new feature? Head over to the discussions "Ideas" Category
-  - name: Support the project
-    url: https://github.com/sponsors/panva
-    about:
-      Are you asking your nth question? Relying on oidc-provider for critical operations? Consider
-      supporting the project so that it may continue being maintained.
   - name: Report a security vulnerability
     url: https://en.wikipedia.org/wiki/Responsible_disclosure
     about:
