--- a/package.json
+++ b/package.json
@@ -58,16 +58,16 @@
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
-    "cacheable-lookup": "^6.0.0",
-    "debug": "^4.1.1",
-    "ejs": "^3.1.5",
-    "got": "^11.7.0",
-    "jose": "^3.12.2",
-    "jsesc": "^3.0.1",
-    "koa": "^2.13.0",
+    "cacheable-lookup": "^6.0.1",
+    "debug": "^4.3.2",
+    "ejs": "^3.1.6",
+    "got": "^11.8.2",
+    "jose": "^3.19.0",
+    "jsesc": "^3.0.2",
+    "koa": "^2.13.3",
     "koa-compose": "^4.1.0",
-    "nanoid": "^3.1.15",
-    "object-hash": "^2.0.3",
+    "nanoid": "^3.1.28",
+    "object-hash": "^2.2.0",
     "oidc-token-hash": "^5.0.1",
     "paseto2": "npm:paseto@^2.1.3",
     "quick-lru": "^5.1.1",
@@ -77,33 +77,33 @@
     "paseto3": "npm:paseto@^3.0.0"
   },
   "devDependencies": {
-    "@hapi/hapi": "^20.0.1",
+    "@hapi/hapi": "^20.2.0",
     "babel-eslint": "^10.1.0",
     "base64url": "^3.0.1",
-    "c8": "^7.7.2",
-    "chai": "^4.2.0",
+    "c8": "^7.9.0",
+    "chai": "^4.3.4",
     "clear-module": "^4.1.1",
     "connect": "^3.7.0",
-    "eslint": "^7.11.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2",
     "express": "^4.17.1",
-    "fastify": "^3.7.0",
-    "helmet": "^4.4.1",
+    "fastify": "^3.21.6",
+    "helmet": "^4.6.0",
     "https-pem": "^2.0.0",
     "jose2": "npm:jose@^2.0.4",
     "koa-body": "^4.2.0",
     "koa-ejs": "^4.3.0",
     "koa-mount": "^4.0.0",
-    "koa-router": "^10.0.0",
-    "lodash": "^4.17.20",
-    "middie": "^5.2.0",
-    "mocha": "^8.2.0",
-    "mocha.parallel": "panva/mocha.parallel",
+    "koa-router": "^10.1.1",
+    "lodash": "^4.17.21",
+    "middie": "^5.3.0",
+    "mocha": "^8.4.0",
+    "mocha.parallel": "github:panva/mocha.parallel",
     "moment": "^2.29.1",
-    "nock": "^13.0.4",
-    "sinon": "^11.0.0",
-    "supertest": "^6.1.3",
+    "nock": "^13.1.3",
+    "sinon": "^11.1.2",
+    "supertest": "^6.1.6",
     "timekeeper": "^2.2.0"
   },
   "engines": {
