--- a/package.json
+++ b/package.json
@@ -107,6 +107,6 @@
     "timekeeper": "^2.2.0"
   },
   "engines": {
-    "node": "^12.19.0 || ^14.15.0"
+    "node": "^12.19.0 || ^14.15.0 || ^16.13.0"
   }
 }
