--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "nanoid": "^3.1.28",
     "object-hash": "^2.2.0",
     "oidc-token-hash": "^5.0.1",
-    "paseto2": "npm:paseto@^2.1.3",
+    "paseto": "^2.1.3",
     "quick-lru": "^5.1.1",
     "raw-body": "^2.4.1"
   },
