--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -95,7 +95,7 @@ jobs:
         uses: actions/checkout@master
       - name: Set Conformance Suite Version
         run: |
-          export VERSION=($(curl --silent --header "PRIVATE-TOKEN: ${{ secrets.GITLAB_API_TOKEN }}" "https://gitlab.com/api/v4/projects/4175605/releases" | jq -r '.[0].tag_name'))
+          export VERSION=($(curl --silent "https://gitlab.com/api/v4/projects/4175605/releases" | jq -r '.[0].tag_name'))
           echo "VERSION=$VERSION" >> $GITHUB_ENV
       - name: Load Cached Conformance Suite Build
         uses: actions/cache@v2
