--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   audit:
     name: NPM Audit (Production)
+    continue-on-error: true
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -133,7 +134,6 @@ jobs:
   conformance-suite:
     runs-on: ubuntu-latest
     needs:
-      - audit
       - test
       - build-conformance-suite
     env:
