--- a/.github/workflows/lock.yml
+++ b/.github/workflows/lock.yml
@@ -2,16 +2,16 @@ name: 'Lock threads'
 
 on:
   schedule:
-    - cron: '0 9 * * *'
+    - cron: '10 9 * * *'
 
 jobs:
   lock:
     runs-on: ubuntu-latest
     steps:
-      - uses: dessant/lock-threads@v2
+      - uses: dessant/lock-threads@v3
         with:
           github-token: ${{ github.token }}
-          issue-lock-inactive-days: '90'
+          issue-inactive-days: '90'
           issue-lock-reason: ''
-          pr-lock-inactive-days: '90'
+          pr-inactive-days: '90'
           pr-lock-reason: ''
